crates/keron-lang/tests/corpus/errors/check/merge_rejects_mismatched_value_types.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: type mismatch in `merge`: type parameter `V` was inferred as `String` from an earlier argument, but this argument is `Int`
  --> 8:39
  |
8 | val m: Map<String, String> = merge(a, b)
  |                                       ^
